<resources>
    <string name="app_name">dmzj</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">未登录</string>
    <string name="nav_header_subtitle">@string/default_sign</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="default_sign">这个人很神秘，什么都没有写（//▽//）</string>

    <string name="action_search">搜索</string>

    <string name="tab_comic">漫画</string>
    <string name="tab_news">新闻</string>
    <string name="tab_novel">小说</string>

    <string name="menu_history">历史记录</string>
    <string name="menu_download">下载管理</string>
    <string name="menu_bookmark">我的书架</string>
    <string name="menu_night">夜间模式</string>
    <string name="menu_settings">设置</string>
    <string name="menu_feedback">反馈</string>
    <string name="menu_about">关于</string>

    <string name="tab_square">推荐</string>
    <string name="tab_update">更新</string>
    <string name="tab_category">分类</string>
    <string name="tab_ranking">排行</string>
    <string name="tab_special">专题</string>

    <string name="tab_news_recommend">推荐</string>
    <string name="tab_news_animator">动画情报</string>
    <string name="tab_news_comic">漫画情报</string>
    <string name="tab_news_novel">轻小说情报</string>
    <string name="tab_news_picture">美图欣赏</string>
    <string name="tab_news_game">游戏资讯</string>
    <string name="tab_news_periphery">动漫周边</string>
    <string name="tab_news_voice_actor">声优情报</string>
    <string name="tab_news_exhibition">漫展情报</string>
    <string name="tab_news_music">音乐资讯</string>
    <string name="tab_news_others">大杂烩</string>

    <string name="more">更多</string>
    <string name="login">登录</string>
    <string name="register">手机注册</string>
    <string name="phone">电话号码</string>
    <string name="sms_code">短信验证码</string>
    <string name="username">手机号/邮箱/用户名</string>
    <string name="password">密码</string>
    <string name="try_to_login">进入大妈之家</string>
    <string name="try_to_register">立即注册</string>
    <string name="send_sms_code">发送验证码</string>
    <string name="forgot_your_password">忘记密码？</string>

    <string name="input_your_comment_here">在这里发表您的评论</string>
    <string name="input_your_comment">发表评论</string>
    <string name="submit_comment">发布</string>
    <string name="click_to_remove_picture">点击图片可删除</string>
    <string name="category">目录</string>
    <string name="author_others">作者的其他作品</string>

    <string name="sort">排序</string>
    <string name="search">搜索</string>
    <string name="reading">阅读</string>
    <string name="subscribe">订阅</string>
    <string name="comment">评论</string>
    <string name="refresh">刷新</string>
    <string name="share">分享</string>
    <string name="copy_url">复制链接</string>
    <string name="open_in_browser">在浏览器中打开</string>
    <string name="clear_cache">清空缓存</string>
    <string name="clear_cookie">清空Cookie</string>
    <string name="title_activity_main_v2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    
</resources>
