<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/activity_browser_refresh"
        android:title="@string/refresh"
        app:showAsAction="never"/>

    <item
        android:id="@+id/activity_browser_share"
        android:title="@string/share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/activity_browser_copy_url"
        android:title="@string/copy_url"
        app:showAsAction="never"/>

    <item
        android:id="@+id/activity_browser_open_in_browser"
        android:title="@string/open_in_browser"
        app:showAsAction="never" />

    <item
        android:id="@+id/activity_browser_clear_cache"
        android:title="@string/clear_cache"
        app:showAsAction="never" />

    <item
        android:id="@+id/activity_browser_clear_cookie"
        android:title="@string/clear_cookie"
        app:showAsAction="never" />
</menu>