<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_history" />
        <item
            android:visible="false"
            android:id="@+id/activity_main_download"
            android:icon="@drawable/ic_cloud_download_black_24dp"
            android:title="@string/menu_download" />
        <item
            android:id="@+id/activity_main_bookshelf"
            android:icon="@drawable/ic_star_border_black_24dp"
            android:title="@string/menu_bookmark" />
        <item
            android:id="@+id/activity_main_night"
            android:icon="@drawable/ic_brightness_high_black_24dp"
            android:title="@string/menu_night"
            app:actionViewClass="androidx.appcompat.widget.SwitchCompat"/>
        <item
            android:id="@+id/activity_main_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>

    <group>
        <item
            android:id="@+id/activity_main_feedback"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/activity_main_about"
            android:icon="@drawable/ic_sentiment_satisfied_black_24dp"
            android:title="@string/menu_about" />
    </group>

<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_share" />-->
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_send" />-->
<!--        </menu>-->
<!--    </item>-->
</menu>
